# wallpapifier

./: LICENSE  README.md  pyproject.toml
wallpapifier/: __main__.py
